added get enrolled section

--- a/index.html
+++ b/index.html
@@ -217,7 +217,55 @@
             </div>
         </section>
 
-        
+        <!-- Enroll Now  -->
+        <section class="get-enrolled py-5 px-3">
+            <div class="container">
+                <div class="row bg-primary text-white py-5 px-4 rounded-3">
+                    <div class="col-md-6 col-lg-6">
+                        <div class="enroll">
+                            <h2>Admission are open now</h2>
+                            <p>Join us today and start learning with our best instructors and start your career.</p>
+                        </div>
+                    </div>
+                    <div class=" col-md-6 col-lg-6 d-flex justify-content-center align-items-center">
+                        <button type="button" class="btn btn-light py-3 px-4" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal" data-bs-whatever="@mdo">Enroll Now</button>
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                            aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title text-black" id="exampleModalLabel">Register</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form>
+                                            <div class="mb-3">
+                                                <label for="recipient-name" class="col-form-label text-black">Name:</label>
+                                                <input type="text" class="form-control" id="recipient-name">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="recipient-name" class="col-form-label text-black">Email:</label>
+                                                <input type="text" class="form-control" id="recipient-name">
+                                            </div>
+                                            <div class="mb-3">
+                                                <label for="message-text" class="col-form-label text-black">Message:</label>
+                                                <textarea class="form-control" id="message-text"></textarea>
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-primary">Register</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         
 
