--- a/index.html
+++ b/index.html
@@ -267,7 +267,96 @@
             </div>
         </section>
 
-        
+        <!-- FAQ -->
+        <section class="section faq py-5">
+            <div class="container">
+                <h2 class="section-title text-center m-auto">Frequently Asked Questions</h2>
+                <p class="section-text text-center">It is a long established fact that a reader will be distracted by the
+                    readable content of a page when looking at its layout.</p>
+                <div class="row pt-4">
+                    <div class="col-md-3 col-lg-3"></div>
+                    <div class="col-md-6 col-lg-6">
+                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                            <div class="accordion-item mb-2 border">
+                                <h2 class="accordion-header" id="flush-headingOne">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                        aria-controls="flush-collapseOne">
+                                        What are the differences between flexbox and grid?
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseOne" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to
+                                        demonstrate the
+                                        <code>.accordion-flush</code> class. This is the first item's accordion body.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item mb-2 border">
+                                <h2 class="accordion-header" id="flush-headingTwo">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                        aria-controls="flush-collapseTwo">
+                                        What are the differences between bootstrap and tailwind?
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to
+                                        demonstrate the
+                                        <code>.accordion-flush</code> class. This is the second item's accordion body. Let's
+                                        imagine this being
+                                        filled with some actual content.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item mb-2 border">
+                                <h2 class="accordion-header" id="flush-headingThree">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                        aria-controls="flush-collapseThree">
+                                        What is css box model?
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to
+                                        demonstrate the
+                                        <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing
+                                        more exciting
+                                        happening here in terms of content, but just filling up the space to make it look, at
+                                        least at first
+                                        glance, a bit more representative of how this would look in a real-world application.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item mb-2 border">
+                                <h2 class="accordion-header" id="flush-headingFour">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#flush-collapseFour" aria-expanded="false"
+                                        aria-controls="flush-collapseFour">
+                                        What is css box model?
+                                    </button>
+                                </h2>
+                                <div id="flush-collapseFour" class="accordion-collapse collapse"
+                                    aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to
+                                        demonstrate the
+                                        <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing
+                                        more exciting
+                                        happening here in terms of content, but just filling up the space to make it look, at
+                                        least at first
+                                        glance, a bit more representative of how this would look in a real-world application.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-lg-3"></div>
+                </div>
+            </div>
+        </section>
 
         
     </main>
