added companies section

--- a/index.html
+++ b/index.html
@@ -358,7 +358,25 @@
             </div>
         </section>
 
-        
+        <!-- Affiliates -->
+        <section class="companies d-none d-sm-none d-md-none d-lg-block">
+            <div class="container">
+                <h2 class="section-title text-center w-100">Trusted by over 800+ companies</h2>
+                <div class="row py-5">
+                    <div class="col-12">
+                        <ul class="logos list-unstyled d-flex justify-content-between">
+                            <li><img src="images/company/company-1.png" alt=""></li>
+                            <li><img src="images/company/company-2.png" alt=""></li>
+                            <li><img src="images/company/company-3.png" alt=""></li>
+                            <li><img src="images/company/company-4.png" alt=""></li>
+                            <li><img src="images/company/company-5.png" alt=""></li>
+                            <li><img src="images/company/company-6.png" alt=""></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <!-- Main End -->
     
