--- a/index.html
+++ b/index.html
@@ -218,16 +218,16 @@
         </section>
 
         <!-- Enroll Now  -->
-        <section class="get-enrolled py-5 px-3">
+        <section class="get-enrolled py-5">
             <div class="container">
-                <div class="row bg-primary text-white py-5 px-4 rounded-3">
+                <div class="row bg-primary text-white py-5 px-5 rounded-3">
                     <div class="col-md-6 col-lg-6">
                         <div class="enroll">
                             <h2>Admission are open now</h2>
                             <p>Join us today and start learning with our best instructors and start your career.</p>
                         </div>
                     </div>
-                    <div class=" col-md-6 col-lg-6 d-flex justify-content-center align-items-center">
+                    <div class=" col-md-6 col-lg-6 d-flex justify-content-end align-items-center">
                         <button type="button" class="btn btn-light py-3 px-4" data-bs-toggle="modal"
                             data-bs-target="#exampleModal" data-bs-whatever="@mdo">Enroll Now</button>
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -380,6 +380,25 @@
     </main>
     <!-- Main End -->
     
+
+    <footer class="footer bg-dark text-white py-5">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-12">
+                    <h2 class="fw-bolder">Tech Tutor</h2>
+                    <h6>Office 41, Zawaya Buildin, Ghala Muscat,
+                    Sultanate of Oman</h6>
+                    <h6>Privacy Ploicy | Terms of use</h6>
+                    <div class="social-links pt-3">
+                        <a href="" class="link-item text-white d-inline-block rounded-5 mx-2"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="" class="link-item text-white d-inline-block rounded-5 mx-2"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="" class="link-item text-white d-inline-block rounded-5 mx-2"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="" class="link-item text-white d-inline-block rounded-5 mx-2"><i class="fa-brands fa-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
