--- a/index.html
+++ b/index.html
@@ -39,47 +39,48 @@
                             <a class="nav-link text-dark" href="#">Contact</a>
                         </li>
                     </ul>
-                        <button class="btn btn-outline top-btn my-2 my-sm-0 px-4" type="submit">Register</button>
+                        <button class="btn btn-outline-primary top-btn my-2 px-4" type="submit">Register</button>
                 </div>
           </div>
         </nav>
         <div class="slider py-5">
             <div class="container">
                 <div id="carouselExampleDark" class="carousel carousel-white slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
+                    <!-- <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
                             aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    </div>
+                    </div> -->
                     <div class="carousel-inner rounded-4">
                         <div class="carousel-item img-overlay active" data-bs-interval="2000">
                             <img src="images/cover/cover1.png" class="d-block w-100" alt="...">
                             <div class="carousel-caption caption d-md-block">
-                                <h1 class="w-75 m-auto pb-4">Get Started Digital Learning</h1>
+                                <h1 class="w-75 m-auto pb-3">Get Started Digital Learning</h1>
                                 <p class="w-75 m-auto">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                                 <div class="button pt-2">
-                                    <a class="btn btn-lg btn-primary fs-6 text-white px-4 py-2" href="#">Enroll Now</a>
+                                    <a class="btn btn-primary btn-sm fs-6 text-white px-4 py-2" href="#">Enroll Now</a>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item img-overlay" data-bs-interval="2000">
                             <img src="images/cover/cover2.png" class="d-block w-100" alt="...">
                             <div class="carousel-caption caption d-md-block">
-                                <h1 class="w-75 m-auto pb-4">Get Started Digital Learning</h1>
+                                <h1 class="w-75 m-auto pb-3">Get Started Digital Learning</h1>
                                 <p class="w-75 m-auto">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                                 <div class="button pt-2">
-                                    <a class="btn btn-lg btn-primary fs-6 text-white px-4 py-2" href="#">Enroll Now</a>
+                                    <a class="btn btn-sm btn-primary fs-6 text-white px-4 py-2" href="#">Enroll Now</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel-item img-overlay">
+                        <div class="carousel-item img-overlay" data-bs-interval="2000">
                             <img src="images/cover/cover3.png" class="d-block w-100" alt="...">
                             <div class="carousel-caption caption d-md-block">
-                                <h1 class="w-75 m-auto pb-4">Get Started Digital Learning</h1>
-                                <p class="w-75 m-auto">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                                <div class="button pt-2 vh-100">
-                                    <a class="btn btn-lg btn-primary fs-6 text-white px-4 py-2" href="#">Enroll Now</a>
+                                <h1 class="w-75 m-auto pb-3">Get Started Digital Learning</h1>
+                                <p class="w-75 m-auto">It is a long established fact that a reader will be distracted by the readable content of
+                                    a page when looking at its layout.</p>
+                                <div class="button pt-2">
+                                    <a class="btn btn-sm btn-primary fs-6 text-white px-4 py-2" href="#">Enroll Now</a>
                                 </div>
                             </div>
                         </div>
@@ -103,10 +104,12 @@
         <!-- Courses -->
         <section class="our-courses py-5">
             <div class="container">
-                <h2 class="section-title text-center m-auto">Discover Our Popular Courses</h2>
-                <p class="section-text text-center">It is a long established fact that a reader will be distracted by the
-                    readable content of a page when looking at its
-                    layout.</p>
+                <div class="section-title text-center w-50 m-auto">
+                    <h2>Discover Our Popular Courses</h2>
+                    <p>It is a long established fact that a reader will be distracted by the
+                        readable content of a page when looking at its
+                        layout.</p>
+                </div>
                 <div class="row row-cols-1 row-cols-sm-1 row-cols-md-1 row-cols-lg-2 g-4 pt-4">
                     <div class="col">
                         <div class="card h-100">
@@ -216,18 +219,54 @@
                 </div>
             </div>
         </section>
-
+        <!-- Counter -->
+        <section class="counter py-5">
+            <div class="container">
+                <div class="row row-cols-1 row-md-cols-1 row-lg-cols-1">
+                    <div class="card h-100 border-0">
+                        <div class="row g-0">
+                            <div class="col-sm-12 col-md-6 col-lg-4">
+                                <img src="images/working.png" class="img-fluid w-100" alt="...">
+                            </div>
+                            <div class="col-sm-12 col-md-6 col-lg-8 d-flex align-items-center">
+                                <div class="card-body">
+                                    <h2 class="card-title">Explore The elearning Institute</h2>
+                                    <p class="card-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure.</p>
+                                    <p>Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat
+                                    predefined.</p>
+                                    <div class="row w-50">
+                                        <div class="col-sm-2 col-md-2 col-lg-4">
+                                            <h3>3.2K+</h3>
+                                            <span>Online Course</span>
+                                            <button class="btn btn-primary">Read More</button>
+                                        </div>
+                                        <div class="col-sm-2 col-md-2 col-lg-4">
+                                            <h3>3.2K+</h3>
+                                            <span>Online Course</span>
+                                        </div>
+                                        <div class="col-sm-2 col-md-2 col-lg-4">
+                                            <h3>3.2K+</h3>
+                                            <span>Online Course</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Enroll Now  -->
         <section class="get-enrolled py-5">
             <div class="container">
-                <div class="row bg-primary text-white py-5 px-5 rounded-3">
-                    <div class="col-md-6 col-lg-6">
+                <div class="row bg-primary text-white py-5 px-5 mx-1 rounded-3">
+                    <div class="col-sm-12 col-md-6 col-lg-6">
                         <div class="enroll">
                             <h2>Admission are open now</h2>
                             <p>Join us today and start learning with our best instructors and start your career.</p>
                         </div>
                     </div>
-                    <div class=" col-md-6 col-lg-6 d-flex justify-content-end align-items-center">
+                    <div class="col-sm-12 col-md-6 col-lg-6 d-flex justify-content-end align-items-center">
                         <button type="button" class="btn btn-light py-3 px-4" data-bs-toggle="modal"
                             data-bs-target="#exampleModal" data-bs-whatever="@mdo">Enroll Now</button>
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -266,13 +305,13 @@
                 </div>
             </div>
         </section>
-
         <!-- FAQ -->
         <section class="section faq py-5">
             <div class="container">
-                <h2 class="section-title text-center m-auto">Frequently Asked Questions</h2>
-                <p class="section-text text-center">It is a long established fact that a reader will be distracted by the
-                    readable content of a page when looking at its layout.</p>
+            <div class="section-title text-center">
+                <h2>Frequently Asked Questions</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
                 <div class="row pt-4">
                     <div class="col-md-3 col-lg-3"></div>
                     <div class="col-md-6 col-lg-6">
@@ -357,7 +396,6 @@
                 </div>
             </div>
         </section>
-
         <!-- Affiliates -->
         <section class="companies d-none d-sm-none d-md-none d-lg-block">
             <div class="container">
@@ -376,11 +414,9 @@
                 </div>
             </div>
         </section>
-
     </main>
     <!-- Main End -->
     
-
     <footer class="footer bg-dark text-white py-5">
         <div class="container">
             <div class="row text-center">
@@ -388,12 +424,12 @@
                     <h2 class="fw-bolder">Tech Tutor</h2>
                     <h6>Office 41, Zawaya Buildin, Ghala Muscat,
                     Sultanate of Oman</h6>
-                    <h6>Privacy Ploicy | Terms of use</h6>
+                    <h6>Privacy Policy | Terms of use</h6>
                     <div class="social-links pt-3">
-                        <a href="" class="link-item text-white d-inline-block rounded-5 mx-2"><i class="fa-brands fa-facebook-f"></i></a>
-                        <a href="" class="link-item text-white d-inline-block rounded-5 mx-2"><i class="fa-brands fa-twitter"></i></a>
-                        <a href="" class="link-item text-white d-inline-block rounded-5 mx-2"><i class="fa-brands fa-linkedin-in"></i></a>
-                        <a href="" class="link-item text-white d-inline-block rounded-5 mx-2"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.facebook.com" target="_blank" class="link-item text-white d-inline-block rounded-5 mx-2"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="https://twitter.com" class="link-item text-white d-inline-block rounded-5 mx-2"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://www.linkedin.com" class="link-item text-white d-inline-block rounded-5 mx-2"><i class="fa-brands fa-linkedin-in"></i></a>
+                        <a href="https://www.instagram.com" class="link-item text-white d-inline-block rounded-5 mx-2"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
