--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     
     <!-- Header Start -->
-    <header class="top-section">
+    <header class="top-section" id="home">
         <nav class="navbar navbar-expand-lg navbar-light bg-light fs-6 fixed-top">
               <div class="container">
-                <a class="navbar-brand logo" href="#">Tech Tutor</a>
+                <a class="navbar-brand logo" href="#home">Tech Tutor</a>
                 <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavId">
                     <ul class="navbar-nav menubar mx-auto mt-2 mt-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="#">Home</a>
+                            <a class="nav-link text-dark" href="#home">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="#courses">Courses</a>
@@ -343,7 +343,6 @@
                 </div>
             </div>
         </section>
-
         <!-- FAQ -->
         <section class="section faq py-5">
             <div class="container">
@@ -453,6 +452,7 @@
     </main>
     <!-- Main End -->
     
+    <!-- Footer Start -->
     <footer class="footer bg-dark text-white">
         <div class="container">
             <div class="row text-center">
@@ -471,6 +471,7 @@
             </div>
         </div>
     </footer>
+    <!-- Footer End -->
 
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
