added some changes

--- a/index.html
+++ b/index.html
@@ -211,20 +211,19 @@
                 </div>
             </div>
         </section>
-        <!-- About Us -->
+       <!-- About Us -->
         <section class="about-us py-5" id="about">
             <div class="container ">
-                <div class="row row-cols-1 row-md-cols-1 row-lg-cols-1">
-                    <div class="card h-100 border-0">
-                        <div class="row g-0 ">
+                <div class="row">
+                    <div class="card border-0">
+                        <div class="row g-0">
                             <div class="col-sm-12 col-md-6 col-lg-4">
-                                <img src="images/working.png" class="img-fluid" alt="...">
+                                <img src="images/working.png" class="w-100" height="600px" alt="...">
                             </div>
                             <div class="col-sm-12 col-md-6 col-lg-8 d-flex align-items-center card-bg">
                                 <div class="card-body px-5">
-                                    <h2 class="card-title pb-2">Explore Tech Tutor</h2>
-                                    <p class="card-text pb-4">When searching to work with the best online classes website template, look no further than Tech Tutor. This fantastic site canvas is here to help you kick-start your project without doing the work from scratch. Out of the box, Tech Tutor follows all the latest trends and regulations of the web, ensuring a top-class online learning experience. Onedu is optimized for mobile devices, retina screens and popular web browsers.</p>
-                                    <p>If you are ready to create your own online learning platform, do the right thing and pick Tech Tutor now. Save time and enjoy the amazing result.</p>
+                                    <h2 class="card-title pb-1">Explore Tech Tutor</h2>
+                                    <p class="card-text">Our instructors are highly qualified and experienced. They will provide the best quality courses. Take a look to our courses and join a course suitable for you.</p>
                                     <div class="row counter pt-4">
                                         <div class="col-sm-12 col-md-6 col-lg-4">
                                             <h3>3.2K+</h3>
@@ -247,6 +246,26 @@
                 </div>
             </div>
         </section>
+        <!-- <section class="about">
+            <div class="container">
+                <div class="row">
+                    <div class="card" width="30rem">
+                        <div class="row">
+                            <div class="col-sm-12 col-md-5 col-lg-4">
+                                <img src="images/working.png" class="card-img" height="450px" alt="">
+                            </div>
+                            <div class="col-sm-12 col-md-7 col-lg-8 card-body px-5">
+                                
+                                    <h2 class="card-text">Explore Tech Tutor</h2>
+                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni magnam quam illo accusantium quae, fugiat eveniet vel, fuga itaque praesentium officia vero iste consequatur aliquid natus eligendi perferendis sunt necessitatibus!</p>
+                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora architecto expedita ad eius perspiciatis, minus quasi vero vitae voluptatum asperiores.</p>
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section> -->
         <!-- Enroll Now  -->
         <section class="get-enrolled py-5" id="enroll">
             <div class="container">
@@ -303,7 +322,7 @@
                     <h2>Our Succesful Students</h2>
                     <p>Take a step ahead and make the right choice to build your future</p>
                 </div>
-                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 pt-4">
+                <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-4 pt-4 g-3">
                     <div class="col">
                         <div class="card h-100">
                             <img src="images/student/student-1.png" class="card-img-top" alt="...">
