--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <div id="carouselExampleDark" class="carousel carousel-white slide" data-bs-ride="carousel">
                     <div class="carousel-inner rounded-4">
                         <div class="carousel-item img-overlay active" data-bs-interval="2000">
-                            <img src="images/cover/cover1.png" class="d-block w-100" alt="...">
-                            <div class="carousel-caption caption d-md-block">
+                            <img src="images/cover/cover1.png" class="d-block img-fluid" alt="...">
+                            <div class="carousel-caption caption d-md-block m-auto position-absolute px-4">
                                 <h1 class="pb-2">Learn from the expert</h1>
                                 <p class="text-white">Build skills with courses, certificates and degress online from Tech Tutor</p>
                                 <div class="button pt-2">
@@ -59,8 +59,8 @@
                             </div>
                         </div>
                         <div class="carousel-item img-overlay" data-bs-interval="2000">
-                            <img src="images/cover/cover2.png" class="d-block w-100" alt="...">
-                            <div class="carousel-caption caption d-md-block">
+                            <img src="images/cover/cover2.png" class="d-block img-fluid" alt="...">
+                            <div class="carousel-caption caption d-md-block m-auto position-absolute px-4">
                                 <h1 class="pb-2">Learn from the expert</h1>
                                 <p class="text-white">Build skills with courses, certificates and degress online from Tech Tutor</p>
                                 <div class="button pt-2">
@@ -69,8 +69,8 @@
                             </div>
                         </div>
                         <div class="carousel-item img-overlay" data-bs-interval="2000">
-                            <img src="images/cover/cover3.png" class="d-block w-100" alt="...">
-                            <div class="carousel-caption caption d-md-block">
+                            <img src="images/cover/cover3.png" class="d-block img-fluid" alt="...">
+                            <div class="carousel-caption caption d-md-block m-auto position-absolute px-4">
                                 <h1 class="pb-2">Learn from the expert</h1>
                                 <p class="text-white">Build skills with courses, certificates and degress online from Tech Tutor</p>
                                 <div class="button pt-2">
