--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                     <div class="col">
                         <div class="card h-100">
                             <div class="row g-0">
-                                <div class="col-sm-12 col-md-6 col-lg-4">
+                                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                                     <img src="images/course/course1.png" class="img-fluid w-100" alt="...">
                                 </div>
-                                <div class="col-sm-12 col-md-6 col-lg-8 d-flex align-items-center">
+                                <div class="col-12 col-sm-12 col-md-6 col-lg-8 d-flex align-items-center">
                                     <div class="card-body">
                                         <h5 class="card-title">Web Design</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make up the
@@ -123,10 +123,10 @@
                     <div class="col">
                         <div class="card h-100">
                             <div class="row g-0">
-                                <div class="col-sm-12 col-md-6 col-lg-4">
+                                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                                     <img src="images/course/course2.png" class="img-fluid w-100" alt="...">
                                 </div>
-                                <div class="col-sm-12 col-md-6 col-lg-8 d-flex align-items-center">
+                                <div class="col-12 col-sm-12 col-md-6 col-lg-8 d-flex align-items-center">
                                     <div class="card-body">
                                         <h5 class="card-title">UI/UX Design</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make up the
@@ -140,10 +140,10 @@
                     <div class="col">
                         <div class="card h-100">
                             <div class="row g-0">
-                                <div class="col-sm-12 col-md-6 col-lg-4">
+                                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                                     <img src="images/course/course3.png" class="img-fluid w-100" alt="...">
                                 </div>
-                                <div class="col-sm-12 col-md-6 col-lg-8 d-flex align-items-center">
+                                <div class="col-12 col-sm-12 col-md-6 col-lg-8 d-flex align-items-center">
                                     <div class="card-body">
                                         <h5 class="card-title">Web Development</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make up the
@@ -157,10 +157,10 @@
                     <div class="col">
                         <div class="card h-100">
                             <div class="row g-0">
-                                <div class="col-sm-12 col-md-6 col-lg-4">
+                                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                                     <img src="images/course/course4.png" class="img-fluid w-100" alt="...">
                                 </div>
-                                <div class="col-sm-12 col-md-6 col-lg-8 d-flex align-items-center">
+                                <div class="col-12 col-sm-12 col-md-6 col-lg-8 d-flex align-items-center">
                                     <div class="card-body">
                                         <h5 class="card-title">Graphic Design</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make up the
@@ -174,10 +174,10 @@
                     <div class="col">
                         <div class="card h-100">
                             <div class="row g-0">
-                                <div class="col-sm-12 col-md-6 col-lg-4">
+                                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                                     <img src="images/course/course5.png" class="img-fluid w-100" alt="...">
                                 </div>
-                                <div class="col-sm-12 col-md-6 col-lg-8 d-flex align-items-center">
+                                <div class="col-12 col-sm-12 col-md-6 col-lg-8 d-flex align-items-center">
                                     <div class="card-body">
                                         <h5 class="card-title">Digital Marketing</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make up the
@@ -191,10 +191,10 @@
                     <div class="col">
                         <div class="card h-100">
                             <div class="row g-0">
-                                <div class="col-sm-12 col-md-6 col-lg-4">
+                                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                                     <img src="images/course/course6.png" class="img-fluid w-100" alt="...">
                                 </div>
-                                <div class="col-sm-12 col-md-6 col-lg-8 d-flex align-items-center">
+                                <div class="col-12 col-sm-12 col-md-6 col-lg-8 d-flex align-items-center">
                                     <div class="card-body">
                                         <h5 class="card-title">Content Writing</h5>
                                         <p class="card-text">Some quick example text to build on the card title and make up the
@@ -217,23 +217,23 @@
                 <div class="row">
                     <div class="card border-0">
                         <div class="row g-0">
-                            <div class="col-sm-12 col-md-6 col-lg-4">
+                            <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                                 <img src="images/working.png" class="w-100" height="600px" alt="...">
                             </div>
-                            <div class="col-sm-12 col-md-6 col-lg-8 d-flex align-items-center card-bg">
+                            <div class="col-12 col-sm-12 col-md-6 col-lg-8 d-flex align-items-center card-bg">
                                 <div class="card-body px-5">
                                     <h2 class="card-title pb-1">Explore Tech Tutor</h2>
                                     <p class="card-text">Our instructors are highly qualified and experienced. They will provide the best quality courses. Take a look to our courses and join a course suitable for you.</p>
                                     <div class="row counter pt-4">
-                                        <div class="col-sm-12 col-md-6 col-lg-4">
+                                        <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                                             <h3>3.2K+</h3>
                                             <span>Online Course</span>
                                         </div>
-                                        <div class="col-sm-12 col-md-6 col-lg-4">
+                                        <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                                             <h3>600+</h3>
                                             <span>Expert member</span>
                                         </div>
-                                        <div class="col-sm-12 col-md-6 col-lg-4">
+                                        <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                                             <h3>1k+</h3>
                                             <span>Rating & Review</span>
                                         </div>
@@ -246,37 +246,17 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="about">
-            <div class="container">
-                <div class="row">
-                    <div class="card" width="30rem">
-                        <div class="row">
-                            <div class="col-sm-12 col-md-5 col-lg-4">
-                                <img src="images/working.png" class="card-img" height="450px" alt="">
-                            </div>
-                            <div class="col-sm-12 col-md-7 col-lg-8 card-body px-5">
-                                
-                                    <h2 class="card-text">Explore Tech Tutor</h2>
-                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni magnam quam illo accusantium quae, fugiat eveniet vel, fuga itaque praesentium officia vero iste consequatur aliquid natus eligendi perferendis sunt necessitatibus!</p>
-                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora architecto expedita ad eius perspiciatis, minus quasi vero vitae voluptatum asperiores.</p>
-                                
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
         <!-- Enroll Now  -->
         <section class="get-enrolled py-5" id="enroll">
             <div class="container">
                 <div class="row enrollment bg-primary text-white px-5 mx-1 rounded-3">
-                    <div class="col-sm-12 col-md-6 col-lg-6">
-                        <div class="enroll">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                        <div class="enroll text-center text-md-start text-lg-start">
                             <h2>Admission are now open</h2>
                             <p class="text-white">Join us today and start learning with our best instructors and start your career.</p>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-6 d-flex justify-content-end align-items-center">
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-6 d-flex justify-content-center justify-content-md-end justify-content-lg-end align-items-center">
                         <button type="button" class="btn btn-light py-3 px-4" data-bs-toggle="modal"
                             data-bs-target="#exampleModal" data-bs-whatever="@mdo">Enroll Now</button>
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -322,7 +302,7 @@
                     <h2>Our Succesful Students</h2>
                     <p>Take a step ahead and make the right choice to build your future</p>
                 </div>
-                <div class="row row-cols-sm-1 row-cols-md-2 row-cols-lg-4 pt-4 g-3">
+                <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-4 pt-4 g-3">
                     <div class="col">
                         <div class="card h-100">
                             <img src="images/student/student-1.png" class="card-img-top" alt="...">
@@ -370,8 +350,8 @@
                 <p>Feel free to ask any question to know more about us</p>
             </div>
                 <div class="row pt-4">
-                    <div class="col-md-3 col-lg-3"></div>
-                    <div class="col-md-6 col-lg-6">
+                    <div class="col-sm-3 col-md-3 col-lg-3"></div>
+                    <div class="col-sm-6 col-md-6 col-lg-6">
                         <div class="accordion accordion-flush" id="accordionFlushExample">
                             <div class="accordion-item mb-2 border">
                                 <h2 class="accordion-header" id="flush-headingOne">
@@ -446,7 +426,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 col-lg-3"></div>
+                    <div class="col-sm-3 col-md-3 col-lg-3"></div>
                 </div>
             </div>
         </section>
