fixed faq section

--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
                 <p>Feel free to ask any question to know more about us</p>
             </div>
                 <div class="row pt-4">
-                    <div class="col-sm-3 col-md-3 col-lg-3"></div>
-                    <div class="col-sm-6 col-md-6 col-lg-6">
+                    <div class="col-md-3 col-lg-3"></div>
+                    <div class="col-md-6 col-lg-6">
                         <div class="accordion accordion-flush" id="accordionFlushExample">
                             <div class="accordion-item mb-2 border">
                                 <h2 class="accordion-header" id="flush-headingOne">
@@ -426,7 +426,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3 col-md-3 col-lg-3"></div>
+                    <div class="col-md-3 col-lg-3"></div>
                 </div>
             </div>
         </section>
