--- a/index.html
+++ b/index.html
@@ -250,13 +250,13 @@
         <section class="get-enrolled py-5" id="enroll">
             <div class="container">
                 <div class="row enrollment bg-primary text-white px-5 mx-1 rounded-3">
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-                        <div class="enroll text-center text-md-start text-lg-start">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+                        <div class="enroll text-center text-md-center text-lg-start">
                             <h2>Admission are now open</h2>
                             <p class="text-white">Join us today and start learning with our best instructors and start your career.</p>
                         </div>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-6 d-flex justify-content-center justify-content-md-end justify-content-lg-end align-items-center">
+                    <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex justify-content-center justify-content-md-center justify-content-lg-end align-items-center">
                         <button type="button" class="btn btn-light py-3 px-4" data-bs-toggle="modal"
                             data-bs-target="#exampleModal" data-bs-whatever="@mdo">Enroll Now</button>
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
